[package]
name = "bottle-swap-solver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4.34"
js-sys = "0.3.61"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "console",
]

[profile.release]
opt-level = 3
lto = true
